force-app/main/default/objects/Customer_Related_Document__c/Customer_Related_Document__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the documents and their related document Ids in order to map the correct documents in the system</description>
    <label>Customer Related Document</label>
    <nameField>
        <displayFormat>CRD-{000000}</displayFormat>
        <label>Customer Related Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Related Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>