force-app/main/default/objects/Customer_Related_Document__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Customer Related Documents</relationshipLabel>
    <relationshipName>Customer_Related_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>