force-app/main/default/objects/Customer_Related_Document__c/fields/DocumentId__c.field-meta.xml
<CustomField>
    <fullName>DocumentId__c</fullName>
    <label>DocumentId</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>