force-app/main/default/objects/Customer_Related_Document__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <label>File Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking Form</fullName>
            </value>
            <value>
                <fullName>SPA</fullName>
            </value>
            <value>
                <fullName>OQOOD</fullName>
            </value>
            <value>
                <fullName>Payment Completion Certificate</fullName>
            </value>
            <value>
                <fullName>Building Completion Certificate</fullName>
            </value>
            <value>
                <fullName>Handover Notice</fullName>
            </value>
            <value>
                <fullName>Title Deed</fullName>
            </value>
            <value>
                <fullName>Receipt</fullName>
            </value>
            <value>
                <fullName>POP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>